// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-dmlrTW hScWxM Sidebar-resources "
>
  <div
    className="sc-kfzAmx"
  >
    <div>
      <div
        className="sc-fKFyDc bdQneo"
      >
        
      </div>
      <ul
        className="sc-bBXqnf ewOqCC"
      >
        <li
          className="sc-crrsfI sc-fFubgz hbAMma cgTbEP"
        >
          <div
            className="sc-dQppl sc-bkzZxe emvpfb gbVUOL isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-iBPRYJ hwwEyI isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-idOhPF ixQzZS"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-gKsewC gQFzAy"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-fKFyDc bdQneo"
      >
        resources
      </div>
      <ul
        className="sc-bBXqnf ewOqCC"
      >
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="resource4"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="resource4"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    resource4
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  <time
                    dateTime="2017-12-21T15:36:03.000Z"
                    title="2017-12-21T15:36:03.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="resource9"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="resource9"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    resource9
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  <time
                    dateTime="2017-12-21T15:35:58.000Z"
                    title="2017-12-21T15:35:58.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="resource19"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="resource19"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    resource19
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  <time
                    dateTime="2017-12-21T15:35:48.000Z"
                    title="2017-12-21T15:35:48.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="resource29"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="resource29"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    resource29
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  <time
                    dateTime="2017-12-21T15:35:38.000Z"
                    title="2017-12-21T15:35:38.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="resource39"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="resource39"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    resource39
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  <time
                    dateTime="2017-12-21T15:35:28.000Z"
                    title="2017-12-21T15:35:28.000Z"
                  >
                    &lt;45s ago
                  </time>
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="resource49"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="resource49"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    resource49
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  <time
                    dateTime="2017-12-21T15:35:18.000Z"
                    title="2017-12-21T15:35:18.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="resource54"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="resource54"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    resource54
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  <time
                    dateTime="2017-12-21T15:35:13.000Z"
                    title="2017-12-21T15:35:13.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-dmlrTW hScWxM Sidebar-resources "
>
  <div
    className="sc-kfzAmx"
  >
    <div>
      <div
        className="sc-fKFyDc bdQneo"
      >
        
      </div>
      <ul
        className="sc-bBXqnf ewOqCC"
      >
        <li
          className="sc-crrsfI sc-fFubgz hbAMma cgTbEP"
        >
          <div
            className="sc-dQppl sc-bkzZxe emvpfb gbVUOL isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-iBPRYJ hwwEyI isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-idOhPF ixQzZS"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-gKsewC gQFzAy"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-fKFyDc bdQneo"
      >
        resources
      </div>
      <ul
        className="sc-bBXqnf ewOqCC"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-dmlrTW hScWxM Sidebar-resources "
>
  <div
    className="sc-kfzAmx"
  >
    <div>
      <div
        className="sc-fKFyDc bdQneo"
      >
        
      </div>
      <ul
        className="sc-bBXqnf ewOqCC"
      >
        <li
          className="sc-crrsfI sc-fFubgz hbAMma cgTbEP"
        >
          <div
            className="sc-dQppl sc-bkzZxe emvpfb gbVUOL isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-iBPRYJ hwwEyI isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-idOhPF ixQzZS"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-gKsewC gQFzAy"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-fKFyDc bdQneo"
      >
        resources
      </div>
      <ul
        className="sc-bBXqnf ewOqCC"
      >
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="vigoda"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    vigoda
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  <time
                    dateTime="2017-12-21T15:36:07.000Z"
                    title="2017-12-21T15:36:07.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Update error
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="snack"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    snack
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  <time
                    dateTime="2017-12-21T15:35:57.000Z"
                    title="2017-12-21T15:35:57.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Update error
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-dmlrTW hScWxM Sidebar-resources "
>
  <div
    className="sc-kfzAmx"
  >
    <div>
      <div
        className="sc-fKFyDc bdQneo"
      >
        
      </div>
      <ul
        className="sc-bBXqnf ewOqCC"
      >
        <li
          className="sc-crrsfI sc-fFubgz hbAMma cgTbEP"
        >
          <div
            className="sc-dQppl sc-bkzZxe emvpfb gbVUOL isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-iBPRYJ hwwEyI isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-idOhPF ixQzZS"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-gKsewC gQFzAy"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-fKFyDc bdQneo"
      >
        resources
      </div>
      <ul
        className="sc-bBXqnf ewOqCC"
      >
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="vigoda"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    vigoda
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  —
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Updating…
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-crrsfI hbAMma u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <button
            className="sc-fubCfw fpsRmn"
            onClick={[Function]}
            title="Pin to Top"
          >
            <svg
              className="sc-jrAGrp fOOXsv"
            >
              pin.svg
            </svg>
          </button>
          <div
            className="sc-dQppl emvpfb  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-bqyKva iOaTfz"
            >
              <div
                className="sc-kstrdz jgyLFF"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF ixQzZS"
                  title="snack"
                >
                  <span
                    className="sc-dIUggk jFXYYt"
                  >
                    snack
                  </span>
                </div>
                <span
                  className="sc-hHftDr jNXbdR"
                >
                  —
                </span>
                <button
                  className="sc-kEjbxe hwoPwP"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-hBEYos gzlYDn"
              >
                <div
                  aria-describedby={null}
                  className="sc-iBPRYJ hwwEyI isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-fodVxV MMTZO"
                >
                  Updating…
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
